--- a/index.html
+++ b/index.html
@@ -268,7 +268,7 @@
         </div>
     </section>
 
-    <section class="restaurant-menu">
+    <section class="rest-menu">
         <div class="container">
             <div class="row">
                 <div class="info-box">
@@ -291,7 +291,6 @@
                             <p>Eget vulputate vitae quis rutrum blandi:sed. Quarr nulla sit acinia.</p>
                         </li>
                     </ul>
-                    </p>
                 </div>
                 <div class="info-box active-menu">
                     <h4>Main Course</h4>
@@ -313,7 +312,6 @@
                             <p>Eget vulputate vitae quis rutrum blandi:sed. Quarr nulla sit acinia.</p>
                         </li>
                     </ul>
-                    </p>
                 </div>
                 <div class="info-box">
                     <h4>Desserts</h4>
@@ -335,7 +333,6 @@
                             <p>Eget vulputate vitae quis rutrum blandi:sed. Quarr nulla sit acinia.
                         </li>
                     </ul>
-                    </p>
                 </div>
             </div>
         </div>
