CSS & HTML Completato

--- a/index.html
+++ b/index.html
@@ -269,70 +269,82 @@
     </section>
 
     <section class="rest-menu">
-        <div class="container">
+        <div class="container-fluid">
             <div class="row">
-                <div class="info-box">
-                    <h4>Hors d'oeuvres</h4>
-                    <ul class="menu-list">
-                        <li class="menu-ele">
-                            <h5>ahi salmon nigiri <small class="price">$48</small></h5>
-                            <p>Eget vulputate vitae quis rutrum blandi:sed. Quarr nulla sit acinia.</p>
-                        </li>
-                        <li class="menu-ele">
-                            <h5>umi masi salad <small class="price">$21</small></h5>
-                            <p>Eget vulputate vitae quis rutrum blandi:sed. Quarr nulla sit acinia.</p>
-                        </li>
-                        <li class="menu-ele">
-                            <h5>temaki with crab <small class="price">$32</small></h5>
-                            <p>Eget vulputate vitae quis rutrum blandi:sed. Quarr nulla sit acinia.</p>
-                        </li>
-                        <li class="menu-ele">
-                            <h5>california rolls <small class="price">$22</small></h5>
-                            <p>Eget vulputate vitae quis rutrum blandi:sed. Quarr nulla sit acinia.</p>
-                        </li>
-                    </ul>
+                <div class="rest-bg">
+                    <div class="info-box">
+                        <ul class="menu-list">
+                            <li>
+                                <h4>Hors d'oeuvres</h4>
+                            </li>
+                            <li class="menu-ele">
+                                <h5>ahi salmon nigiri <small class="price">$48</small></h5>
+                                <p>Eget vulputate vitae quis rutrum blandi:sed. Quarr nulla sit acinia.</p>
+                            </li>
+                            <li class="menu-ele">
+                                <h5>umi masi salad <small class="price">$21</small></h5>
+                                <p>Eget vulputate vitae quis rutrum blandi:sed. Quarr nulla sit acinia.</p>
+                            </li>
+                            <li class="menu-ele">
+                                <h5>temaki with crab <small class="price">$32</small></h5>
+                                <p>Eget vulputate vitae quis rutrum blandi:sed. Quarr nulla sit acinia.</p>
+                            </li>
+                            <li class="menu-ele">
+                                <h5>california rolls <small class="price">$22</small></h5>
+                                <p>Eget vulputate vitae quis rutrum blandi:sed. Quarr nulla sit acinia.</p>
+                            </li>
+                        </ul>
+                    </div>
                 </div>
-                <div class="info-box active-menu">
-                    <h4>Main Course</h4>
-                    <ul class="menu-list">
-                        <li class="menu-ele">
-                            <h5>braised abalone <small class="price">$52</small></h5>
-                            <p>Mollis ornare sit sapien, sodales. Cursus duis proin semper quisque.</p>
-                        </li>
-                        <li class="menu-ele">
-                            <h5>twice cooked pork<small class="price">$21</small></h5>
-                            <p>Eget vulputate vitae quis rutrum blandi:sed. Quarr nulla sit acinia.</p>
-                        </li>
-                        <li class="menu-ele">
-                            <h5>kung pad chicken<small class="price">$32</small></h5>
-                            <p>Eget vulputate vitae quis rutrum blandi:sed. Quarr nulla sit acinia.</p>
-                        </li>
-                        <li class="menu-ele">
-                            <h5>char siu & sushis <small class="price">$48</small></h5>
-                            <p>Eget vulputate vitae quis rutrum blandi:sed. Quarr nulla sit acinia.</p>
-                        </li>
-                    </ul>
+                <div class="rest-bg">
+                    <div class="info-box">
+                        <ul class="menu-list">
+                            <li>
+                                <h4>Main Course</h4>
+                            </li>
+                            <li class="menu-ele">
+                                <h5>braised abalone <small class="price">$52</small></h5>
+                                <p>Mollis ornare sit sapien, sodales. Cursus duis proin semper quisque.</p>
+                            </li>
+                            <li class="menu-ele">
+                                <h5>twice cooked pork<small class="price">$21</small></h5>
+                                <p>Eget vulputate vitae quis rutrum blandi:sed. Quarr nulla sit acinia.</p>
+                            </li>
+                            <li class="menu-ele">
+                                <h5>kung pad chicken<small class="price">$32</small></h5>
+                                <p>Eget vulputate vitae quis rutrum blandi:sed. Quarr nulla sit acinia.</p>
+                            </li>
+                            <li class="menu-ele">
+                                <h5>char siu & sushis <small class="price">$48</small></h5>
+                                <p>Eget vulputate vitae quis rutrum blandi:sed. Quarr nulla sit acinia.</p>
+                            </li>
+                        </ul>
+                    </div>
                 </div>
-                <div class="info-box">
-                    <h4>Desserts</h4>
-                    <ul class="menu-list">
-                        <li class="menu-ele">
-                            <h5>Cholate ball cake<small class="price">$13</small></h5>
-                            <p>Eget vulputate vitae quis rutrum blandi:sed. Quarr nulla sit acinia.
-                        </li>
-                        <li class="menu-ele">
-                            <h5>Lime pie with crust<small class="price">$14</small></h5>
-                            <p>Eget vulputate vitae quis rutrum blandi:sed. Quarr nulla sit acinia.
-                        </li>
-                        <li class="menu-ele">
-                            <h5>raspberry pear cake<small class="price">$18</small></h5>
-                            <p>Eget vulputate vitae quis rutrum blandi:sed. Quarr nulla sit acinia.
-                        </li>
-                        <li class="menu-ele">
-                            <h5>cafè au lait<small class="price">$6</small></h5>
-                            <p>Eget vulputate vitae quis rutrum blandi:sed. Quarr nulla sit acinia.
-                        </li>
-                    </ul>
+                <div class="rest-bg">
+                    <div class="info-box">
+                        <ul class="menu-list">
+                            <li>
+                                <h4>Desserts</h4>
+                            </li>
+                            <li class="menu-ele">
+                                <h5>Cholate ball cake<small class="price">$13</small></h5>
+                                <p>Eget vulputate vitae quis rutrum blandi:sed. Quarr nulla sit acinia.
+                            </li>
+                            <li class="menu-ele">
+                                <h5>Lime pie with crust<small class="price">$14</small></h5>
+                                <p>Eget vulputate vitae quis rutrum blandi:sed. Quarr nulla sit acinia.
+                            </li>
+                            <li class="menu-ele">
+                                <h5>raspberry pear cake<small class="price">$18</small></h5>
+                                <p>Eget vulputate vitae quis rutrum blandi:sed. Quarr nulla sit acinia.
+                            </li>
+                            <li class="menu-ele">
+                                <h5>cafè au lait<small class="price">$6</small></h5>
+                                <p>Eget vulputate vitae quis rutrum blandi:sed. Quarr nulla sit acinia.
+                            </li>
+                        </ul>
+                    </div>
                 </div>
             </div>
         </div>
@@ -342,46 +354,49 @@
     <!-- Daily Specs -->
     <section class="specialities">
         <div class="container">
-            <div class="box-specs">
-                <h3>Braised abalone <small class="price">$52</small></h3>
-                <p>Pretium accumsan porttitor viverra leo gravida mollis imperdiet. Fringilla nibh pharetra sociis leo amet.</p>
-                <button class="btn btn-black">View in the menu</button>
+            <div class="row">
+                <div class="box-specs">
+                    <h3>Braised abalone <small class="price">$52</small></h3>
+                    <p class="mb50">Pretium accumsan porttitor viverra leo gravida mollis imperdiet. Fringilla nibh pharetra sociis leo amet.</p>
+                    <button class="btn btn-black">View in the menu</button>
+                </div>
             </div>
         </div>
     </section>
 
     <!-- Footer -->
-    <section class="footer">
+    <section class="footer text-cen">
         <div class="container-fluid">
-
-            <!-- Info Footer -->
-            <img src="./img/logo-restaurant-2x-400x77.png" alt="logo restaurant">
-            <p>Quam eu proin sit massa condimentum. Volupat non pulvinar aliquet nunc. Quam eu proin sit massa condimentum.</p>
-            <ul class="social-list">
-                <li class="social-ele">
-                    <i class="fab fa-facebook-f"></i>
-                </li>
-                <li class="social-ele">
-                    <i class="fab fa-twitter"></i>
-                </li>
-                <li class="social-ele">
-                    <i class="fab fa-youtube"></i>
-                </li>
-                <li class="social-ele">
-                    <i class="fab fa-instagram"></i>
-                </li>
-                <li class="social-ele">
-                    <i class="fab fa-linkedin-in"></i>
-                </li>
-            </ul>
-
-            <!-- Copy -->
-            <div class="copyright">
-                <p>Copyright 2012 - 2019 Avada | All Rights Reserved | Powered by WordPress | ThemeFusion</p>
+            <div class="social-footer">
+                <!-- Info Footer -->
+                <img src="./img/logo-restaurant-2x-400x77.png" alt="logo restaurant">
+                <p>Quam eu proin sit massa condimentum. Volupat non pulvinar aliquet nunc. Quam eu proin sit massa condimentum.</p>
+                <ul class="social-list">
+                    <li class="social-ele">
+                        <a href="#"><i class="fab fa-facebook-f"></i></a>
+                    </li>
+                    <li class="social-ele">
+                        <a href="#"><i class="fab fa-twitter"></i></a>
+                    </li>
+                    <li class="social-ele">
+                        <a href="#"><i class="fab fa-youtube"></i></a>
+                    </li>
+                    <li class="social-ele">
+                        <a href="#"><i class="fab fa-instagram"></i></a>
+                    </li>
+                    <li class="social-ele">
+                        <a href="#"><i class="fab fa-linkedin-in"></i></a>                        
+                    </li>
+                </ul>
             </div>
+
         </div>
     </section>
-
+    <!-- Copy -->
+    <div class="copyright">
+        <p>Copyright 2012 - 2019 Avada | All Rights Reserved | Powered by WordPress | ThemeFusion</p>
+    </div>
+    
     <!-- JS INCLUDE -->
     <script src=".js/main.js"></script>
 </body>
