Css Effects Add

--- a/index.html
+++ b/index.html
@@ -72,6 +72,7 @@
                     </div>
                     <div class="mission-img">
                         <img src="./img/info22x.jpg" alt="experience image">
+                        <h5>California rolls - <span class="price">$22</span></h5>
                     </div>
                 </div>
             </div>
@@ -135,19 +136,21 @@
                     <div class="img-box-crit">
                         <img src="./img/blog72x-800x916.jpg" alt="">
                     </div>
-                    <div class="critics-box">
-                        <p class="name">Meggy Stewart</p>
-                        <h3>New York Times</h3>
-                        <p class="rating">
-                            <i class="fas fa-star"></i>
-                            <i class="fas fa-star"></i>
-                            <i class="fas fa-star"></i>
-                            <i class="fas fa-star"></i>
-                            <i class="fas fa-star"></i>
-                        </p>
-                        <p class="mb20">Non arcu mauris tortor ultrices mollis tellus euismod fermentu. Habitant amet tincidunt id sapien accumsan sed at.</p>
-                        <p class="mb40">Mmalesuada ullamcorper amet. Pretium pretium dignissim nisi.</p>
-                        <button class="btn btn-black">Read full article</button>
+                    <div class="black-box">
+                        <div class="critics-box">
+                            <p class="name">Meggy Stewart</p>
+                            <h3>New York Times</h3>
+                            <p class="rating">
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                            </p>
+                            <p class="mb20">Non arcu mauris tortor ultrices mollis tellus euismod fermentu. Habitant amet tincidunt id sapien accumsan sed at.</p>
+                            <p class="mb40">Mmalesuada ullamcorper amet. Pretium pretium dignissim nisi.</p>
+                            <button class="btn btn-black">Read full article</button>
+                        </div>
                     </div>
                 </div>
     
