--- a/index.html
+++ b/index.html
@@ -213,6 +213,11 @@
                             <h4>the best coffe in town</h4>
                             <p>By admin | January 7th, 2020 | Categories: News</p>
                         </div>
+                        <div class="shadow-text">
+                            <a href="#"><i class="fas fa-link"></i></a>
+                            <h4>the best coffe in town</h4>
+                            <p>News</p>
+                        </div>
                     </div>
                     <div class="info-box">
                         <div class="img-prom-02">
@@ -221,6 +226,11 @@
                             <h4>discover our new menu</h4>
                             <p>By admin | January 7th, 2020 | Categories: News</p>
                         </div>
+                        <div class="shadow-text">
+                            <a href="#"><i class="fas fa-link"></i></a>
+                            <h4>discover our new menu</h4>
+                            <p>News</p>
+                        </div>
                     </div>
                     <div class="info-box">
                         <div class="img-prom-03">
@@ -228,7 +238,12 @@
                         <div class="text-prom">
                             <h4>we now accept square</h4>
                             <p>By admin | January 7th, 2020 | Categories: News</p>
-                            </div>
+                        </div>
+                        <div class="shadow-text">
+                            <a href="#"><i class="fas fa-link"></i></a>
+                            <h4>we now accept square</h4>
+                            <p>News</p>
+                        </div>
                     </div>
                 </div>
             </div>
